unpackaged/main/default/objects/Property__c/fields/Assessed_Value__c.field-meta.xml
<CustomField>
        <fullName>Assessed_Value__c</fullName>
        <label>Assessed Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>