unpackaged/main/default/objects/Property__c/fields/Baths__c.field-meta.xml
<CustomField>
        <fullName>Baths__c</fullName>
        <label>Baths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>