unpackaged/main/default/objects/Property__c/fields/Date_Agreement__c.field-meta.xml
<CustomField>
        <fullName>Date_Agreement__c</fullName>
        <label>Date Agreement</label>
        <type>Date</type>
    </CustomField>