unpackaged/main/default/objects/Property__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </CustomField>