unpackaged/main/default/objects/Property__c/fields/Date_Contracted__c.field-meta.xml
<CustomField>
        <fullName>Date_Contracted__c</fullName>
        <label>Date Contracted</label>
        <type>Date</type>
    </CustomField>