unpackaged/main/default/objects/Property__c/fields/Date_Listed__c.field-meta.xml
<CustomField>
        <fullName>Date_Listed__c</fullName>
        <label>Date Listed</label>
        <type>Date</type>
    </CustomField>