unpackaged/main/default/objects/Property__c/fields/Date_Pre_Market__c.field-meta.xml
<CustomField>
        <fullName>Date_Pre_Market__c</fullName>
        <label>Date Pre Market</label>
        <type>Date</type>
    </CustomField>