unpackaged/main/default/objects/Property__c/fields/Days_On_Market__c.field-meta.xml
<CustomField>
        <fullName>Days_On_Market__c</fullName>
        <formula>TODAY() - Date_Listed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>