unpackaged/main/default/objects/Property__c/fields/Picture__c.field-meta.xml
<CustomField>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </CustomField>