unpackaged/main/default/objects/Property__c/fields/Picture_IMG__c.field-meta.xml
<CustomField>
        <fullName>Picture_IMG__c</fullName>
        <formula>if(ISBLANK(Picture__c), '', IMAGE(Picture__c, "Picture"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Picture</label>
        <type>Text</type>
    </CustomField>