unpackaged/main/default/objects/Property__c/fields/Record_Link__c.field-meta.xml
<CustomField>
        <fullName>Record_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </CustomField>