unpackaged/main/default/objects/Property__c/fields/State__c.field-meta.xml
<CustomField>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>