unpackaged/main/default/objects/Property__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
        <fullName>Thumbnail__c</fullName>
        <label>Thumbnail</label>
        <type>Url</type>
    </CustomField>