unpackaged/main/default/objects/Property__c/fields/Thumbnail_IMG__c.field-meta.xml
<CustomField>
        <fullName>Thumbnail_IMG__c</fullName>
        <formula>if(ISBLANK(Thumbnail__c), "", IMAGE(Thumbnail__c, "Picture", 200, 200))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Thumbnail</label>
        <type>Text</type>
    </CustomField>