unpackaged/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Beds__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>